{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 48,
  "lineage": "372900da-5d59-f192-37a7-86e162fd54e0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:vpc/vpc-00d3ce48b1a84ed56",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0eb8aa9ce0b73c06c",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-02ae7a3b66d7d78d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d3ce48b1a84ed56",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f241152f351b1c90",
            "owner_id": "958205497271",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6819bf5fdab849",
            "association_id": "eipassoc-0cdbf11ef18c77062",
            "domain": "vpc",
            "id": "eipalloc-07e6819bf5fdab849",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dfe900bb69395521",
            "private_dns": "ip-10-0-16-233.ec2.internal",
            "private_ip": "10.0.16.233",
            "public_dns": "ec2-54-208-154-1.compute-1.amazonaws.com",
            "public_ip": "54.208.154.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08af3f99a03fa0dd6",
            "association_id": "eipassoc-0fba2f82eab93418b",
            "domain": "vpc",
            "id": "eipalloc-08af3f99a03fa0dd6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0056969e35d6b6072",
            "private_dns": "ip-10-0-62-194.ec2.internal",
            "private_ip": "10.0.62.194",
            "public_dns": "ec2-54-160-120-48.compute-1.amazonaws.com",
            "public_ip": "54.160.120.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:internet-gateway/igw-0adb8088d12e962a8",
            "id": "igw-0adb8088d12e962a8",
            "owner_id": "958205497271",
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6819bf5fdab849",
            "connectivity_type": "public",
            "id": "nat-05a2f0e1430b87e77",
            "network_interface_id": "eni-0dfe900bb69395521",
            "private_ip": "10.0.16.233",
            "public_ip": "54.208.154.1",
            "subnet_id": "subnet-0278e2b5b7e71261e",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08af3f99a03fa0dd6",
            "connectivity_type": "public",
            "id": "nat-0215d699a9977ae55",
            "network_interface_id": "eni-0056969e35d6b6072",
            "private_ip": "10.0.62.194",
            "public_ip": "54.160.120.48",
            "subnet_id": "subnet-0524dc85048ea2a58",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:route-table/rtb-0c7581ff7425a72dd",
            "id": "rtb-0c7581ff7425a72dd",
            "owner_id": "958205497271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a2f0e1430b87e77",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:route-table/rtb-07b35f0d7a4d3ab59",
            "id": "rtb-07b35f0d7a4d3ab59",
            "owner_id": "958205497271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0215d699a9977ae55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:route-table/rtb-0126ab9f0a1d67929",
            "id": "rtb-0126ab9f0a1d67929",
            "owner_id": "958205497271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adb8088d12e962a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ed3696e53b15394",
            "route_table_id": "rtb-0c7581ff7425a72dd",
            "subnet_id": "subnet-0372d9275bb1b2ea6"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04974e909d1d22c37",
            "route_table_id": "rtb-07b35f0d7a4d3ab59",
            "subnet_id": "subnet-0477ced24be2587d4"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014abb028dfa1fe49",
            "route_table_id": "rtb-0126ab9f0a1d67929",
            "subnet_id": "subnet-0278e2b5b7e71261e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8b169f829d71d33",
            "route_table_id": "rtb-0126ab9f0a1d67929",
            "subnet_id": "subnet-0524dc85048ea2a58"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:subnet/subnet-0372d9275bb1b2ea6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372d9275bb1b2ea6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958205497271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kkubernetes.io/role/internal-elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kkubernetes.io/role/internal-elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:subnet/subnet-0477ced24be2587d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0477ced24be2587d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958205497271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kkubernetes.io/role/internal-elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kkubernetes.io/role/internal-elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:subnet/subnet-0278e2b5b7e71261e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0278e2b5b7e71261e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958205497271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kkubernetes.io/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kkubernetes.io/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:subnet/subnet-0524dc85048ea2a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0524dc85048ea2a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958205497271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kkubernetes.io/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kkubernetes.io/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-00d3ce48b1a84ed56"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958205497271:vpc/vpc-00d3ce48b1a84ed56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d758c5275ca10ff1",
            "default_route_table_id": "rtb-0f241152f351b1c90",
            "default_security_group_id": "sg-037d96b3cb2d82d35",
            "dhcp_options_id": "dopt-02ae7a3b66d7d78d0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d3ce48b1a84ed56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f241152f351b1c90",
            "owner_id": "958205497271",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}